--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@
 @charset "utf-8";
 
 // Define a font stack that prioritizes Japanese fonts
+$serif: "游明朝体", "Yu Mincho", "YuMincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", serif;
 $sans-serif: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", Meiryo, "メイリオ", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", sans-serif;
 
 // Import the Minimal Mistakes theme styles
@@ -12,17 +13,33 @@ $sans-serif: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", Mei
 @import "minimal-mistakes"; // main partials
 
 
-/* --- Qiita-like Customizations --- */
+/* --- note.com-like Customizations --- */
+
+body {
+  font-family: $serif;
+}
 
 .masthead {
-  background-color: #55c500 !important;
+  background-color: #fff !important;
+  border-bottom: 1px solid #eee;
 }
 
 .masthead__inner-wrap {
   .masthead__menu-item {
-    color: white !important;
+    color: #333 !important;
   }
   .masthead__title a {
-    color: white !important;
+    color: #333 !important;
   }
+}
+
+#main {
+  max-width: 720px;
+  margin: 0 auto;
+  padding-top: 2em;
+}
+
+.page__title {
+  font-size: 2em;
+  font-family: $serif;
 }
